--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,11 +27,13 @@
 
   <TextView
       android:id="@+id/textView"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="221dp"
+      android:layout_height="66dp"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
-      android:layout_marginBottom="58dp"
+      android:layout_marginBottom="10dp"
+      android:maxLines="10"
+      android:singleLine="false"
       android:text="TextView" />
 
 </RelativeLayout>
