--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,8 @@
       android:layout_marginBottom="10dp"
       android:maxLines="10"
       android:singleLine="false"
-      android:text="TextView" />
+      android:text="TextView"
+      android:textAlignment="center"
+      android:textColor="@android:color/holo_red_dark" />
 
 </RelativeLayout>
