implemented CvHelper, Dot, Line and added a CvHelper View to show lines and dots that one would want to show to develop CV features.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,14 @@
       android:id="@+id/surfaceview"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
-      android:layout_gravity="top"/>
+      android:layout_gravity="top" />
+
+  <com.google.ar.core.examples.java.helloar.CvHelper
+      android:id="@+id/cvhelper"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentTop="true" />
+
 
 </RelativeLayout>
